exports[`postsReducer FETCH_POSTS_SUCCESS, initialState 1`] = `
Object {
  "fetchedPages": Object {
    "2": Array [
      "1",
    ],
  },
  "isLoading": false,
  "postsById": Object {
    "1": "foo",
  },
  "selectedPage": 2,
  "totalPages": 2,
  "totalRecords": 12,
}
`;

exports[`postsReducer FETCH_POSTS_SUCCESS, new page 1`] = `
Object {
  "fetchedPages": Object {
    "1": Array [
      "1",
      "2",
    ],
    "2": Array [
      "3",
    ],
  },
  "isLoading": false,
  "postsById": Object {
    "1": "foo",
    "2": "xyz",
    "3": "bar",
  },
  "selectedPage": 2,
  "totalPages": 2,
  "totalRecords": 8,
}
`;

exports[`postsReducer FETCH_POSTS_SUCCESS, overwrite existing page 1`] = `
Object {
  "fetchedPages": Object {
    "1": Array [
      "2",
      "3",
    ],
  },
  "isLoading": false,
  "postsById": Object {
    "1": "foo",
    "2": "alio",
    "3": "bar",
  },
  "selectedPage": 1,
  "totalPages": 1,
  "totalRecords": 8,
}
`;
